# water-intake-tracker-server-application

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docs.yaml  pyproject.toml  run.ps1  run.sh
src/: __init__.py  main.py
src/application/user/dto/: input.py  output.py
src/application/user/services/: create.py
src/application/user_hydration_summary/dto/: output.py
src/application/user_hydration_summary/services/: retrieve_day_summary.py
src/application/water_intake/dto/: input.py  output.py
src/application/water_intake/services/: register_intake.py  retrieve_history.py
src/domain/shared/: exceptions.py
src/domain/user/constants/: __init__.py
src/domain/user/entity/: __init__.py
src/domain/user/repository/: __init__.py  repository.py
src/domain/user/value_objects/: __init__.py
src/domain/water_intake/entity/: __init__.py
src/domain/water_intake/repository/: __init__.py  repository.py
src/infrastructure/api/controllers/: __init__.py  user.py  user_hydration_summary.py  water_intake.py
src/infrastructure/api/dto/user/: create.py
src/infrastructure/api/dto/user_hydration_summary/: output.py
src/infrastructure/api/dto/water_intake/: register.py
src/infrastructure/api/middlewares/error_handler/: __init__.py
src/infrastructure/api/router/: __init__.py
src/infrastructure/database/connection/: __init__.py
src/infrastructure/dependency_injection/: __init__.py
src/infrastructure/logging/: __init__.py
src/infrastructure/repository/user/: __init__.py
src/infrastructure/repository/water_intake/: __init__.py
(+7 files in other folders)
